<package format="3">
  <name>rqt_runtime_monitor</name>
  <version>0.5.8</version>
  <description>rqt_runtime_monitor provides a GUI plugin viewing DiagnosticsArray messages.</description>
  <maintainer email="ablasdel@gmail.com">Aaron Blasdel</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_runtime_monitor</url>
  <url type="repository">https://github.com/ros-visualization/rqt_runtime_monitor</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_runtime_monitor/issues</url>

  <author>Aaron Blasdel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  <exec_depend>qt_gui</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
